# Project_ship-ais

./: .gitignore  AIS_1.txt  PROJECT_STRUCTURE.md  TESTING_SETUP.md  conftest.py  convert_scenario_to_ais.py  demo.py  demo_apply_colregs_rule.py  demo_cri_calculation.py  demo_encounter_type.py  install_dependencies.sh  pytest.ini  requirements.txt  run_tests.sh  start.sh  tasks.md  visual_demo.py  操作指南.md  数据说明.md  系统使用说明.md
.kiro/specs/maritime-collision-avoidance/: design.md  requirements.md  tasks.md
config/: system_config.yaml
docs/: DEVELOPER.md  SCENARIO_TO_AIS_WORKFLOW.md  USER_MANUAL.md
examples/scenarios/: README.md
ouyang/: ais_message_format_converter.py
src/ais_msgs/: CMakeLists.txt  package.xml
src/ais_msgs/msg/: AisShip.msg  AisShipList.msg
src/ais_simulator/: package.xml  setup.cfg  setup.py  ships_config.yaml
src/ais_simulator/ais_simulator/: ais_sim_node.py  map_loader.py
src/ais_simulator/config/: river.geojson  ships_config.yaml
src/ais_simulator/msg/: AisShip.msg  AisShipList.msg
src/ais_to_mqtt/: package.xml  setup.cfg  setup.py
src/ais_to_mqtt/ais_to_mqtt/: ais_file_test_node.py  ais_reader_node.py  ais_to_lan_node.py  analyzeData.py  mqtt_bridge_node.py
src/collision_avoidance/: package.xml  setup.cfg  setup.py
src/collision_avoidance/collision_avoidance/: __init__.py  algorithm_plugin.py  collision_avoidance_node.py  config_watcher.py  path_planning.py  risk_assessment.py  rules_engine.py  visualization_publisher_node.py
src/collision_avoidance/msg/: ControlCommand.msg
src/collision_avoidance/test/: test_algorithm_plugin.py  test_config_watcher.py  test_integration.py  test_path_planning.py  test_risk_assessment.py  test_rules_engine.py  test_visualization_publisher.py
src/data_logger/: package.xml  setup.cfg  setup.py
src/data_logger/data_logger/: data_logger_node.py  data_models.py  replay_exporter.py
src/data_logger/test/: test_data_logger.py  test_replay_exporter.py
src/scenario_generator/: package.xml  setup.cfg  setup.py
src/scenario_generator/config/scenarios/: README.md  USAGE_EXAMPLE.md  head_on_asymmetric.yaml  head_on_basic.yaml  head_on_close.yaml  head_on_high_speed.yaml  route_aware_demo.yaml  (+1 more)
src/scenario_generator/scenario_generator/: __init__.py  ais_converter.py  config_loader.py  generator.py  models.py  route_scenario_generator.py  scenario_loader.py
src/scenario_generator/test/: __init__.py  test_generator.py  test_models.py  test_poor_visibility_scenario.py  test_restricted_water_scenario.py  test_rough_weather_scenario.py  test_surrounding_scenario.py
src/test_framework/: README.md  __init__.py  package.xml  setup.cfg  setup.py
src/test_framework/scripts/: run_batch_test.py
src/test_framework/test/: test_example.py  test_integration_checkpoint.py  test_metrics_calculator.py  test_report_generator.py
src/test_framework/test_framework/: __init__.py  metrics.py  metrics_calculator.py  report_generator.py  strategies.py  test_helpers.py  test_runner.py
src/wenshan_pro/: README.md  package.xml  setup.cfg  setup.py
src/wenshan_pro/config/scenarios/: wenshan_head_on.yaml
src/wenshan_pro/launch/: wenshan_launch.py
src/wenshan_pro/wenshan_pro/: __init__.py  wenshan_scenario_node.py
templates/: index.html
