<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_avoidance</name>
  <version>0.1.0</version>
  <description>避碰决策模块 - 基于COLREGS规则的智能避碰算法</description>
  <maintainer email="user@todo.todo">Maritime Collision Avoidance Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>scenario_generator</depend>

  <test_depend>pytest</test_depend>
  <test_depend>python3-hypothesis</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
